스토어 상세페이지 리팩토링